@@ -113,7 +113,7 @@ struct SuperAwareOperation : BaseSuperAwareOperation { /* will be immediately ex
 
 template<class T>
 static AST::Node* buildSuperAwareOperation(AST::Node* name) {
-	return(AST::makeApplication(Symbols::Ssimplify, AST::makeApplication(new SuperAwareOperation<T>(), name)));
+	return(AST::makeApplication(Symbols::Sinline, AST::makeApplication(new SuperAwareOperation<T>(), name)));
 }
 
 void resetWorld(void);
