@@ -4,6 +4,7 @@
   * rename 'reduce' to 'simplify'
   * for builtins, if the argument is an unevaluated application, just don't evaluate the builtin.
   * automatically go all the way down to the default should we not be able to apply a BuiltinOperation.
+  * inline in annotator if so told and if it's possible.
 
  -- Danny Milosavljevic <danny_milo@yahoo.com>  Mon, 28 Nov 2011 19:00:00 +0100
 
